--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -29,4 +29,4 @@ jobs:
       
     - name: Coverage
       run: bash <(curl -s https://codecov.io/bash)
-      if: ${{ env.CODECOV_TOKEN != "" }}
+      if: '${{ env.CODECOV_TOKEN != "" }}'
